<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pro_24_12_17_gurleen.EnterNewActivityActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"  android:padding="20dp">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_of_activity" />

        <Spinner
            android:id="@+id/typeOfActivitySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration" />


        <EditText
            android:id="@+id/durationET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment" />

        <EditText
            android:id="@+id/commentET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/addActivityBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_activity_btn" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
